--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ db/*.sqlite3
 .redcar/
 .sass-cache
 /config/config.yml
+/config/initializers/recaptcha.rb
 /coverage.data
 /coverage/
 /db/*.javadb/
